overlays/microshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: registry
spec:
  host: micro-registry.oichman.net
  port:
    targetPort: 5000
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIF/DCCA+SgAwIBAgIUFZy2Ieu28UoPfL4y1i5XY1GZB7EwDQYJKoZIhvcNAQEL
[...]
      -----END CERTIFICATE-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIFrzCCA5egAwIBAgIUeumG7Tezsh9/bNRpWQ+28u8CougwDQYJKoZIhvcNAQEL
[...]
      rupH6mx52b5kmX0z+sN2I5aXyw==
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIJKQIBAAKCAgEAv30iSLUcv4RxoYZFaLnbeVsCZovr7PKatxAgUY7I/y/hx3m4
[...]
      -----END RSA PRIVATE KEY-----
    termination: edge
  to:
    kind: ""
    name: image-registry
    weight: null
status: {}
